# Squad-Nous

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: config.py  exceptions.py  main.py
app/api/: deps.py
app/api/routes/: admin.py  chat.py  health.py  schema.py
app/db/: connection.py  registration_repo.py  session_repo.py
app/models/: chat.py  registration.py  schema.py
app/services/: conversation.py  duplicate_detector.py  schema_extractor.py
app/services/llm/: azure_openai.py  base.py  factory.py  openai_provider.py
config/: prompt.yaml
config/examples/: home-insurance.yaml  pet-insurance.yaml  travel-insurance.yaml
frontend/: Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/components/: ChatInput.tsx  ChatWindow.tsx  CompletionView.tsx  FieldProgress.tsx  InlineCarSelector.tsx  MessageBubble.tsx  QuickReplies.tsx  SessionStatus.tsx  SummaryCard.tsx
frontend/src/hooks/: useChat.ts  useSchema.ts
frontend/src/lib/: api.ts  types.ts
tests/: conftest.py
tests/e2e/: test_full_conversation.py
tests/integration/: test_admin_api.py  test_api.py  test_main.py
tests/unit/: test_config.py  test_conversation_edge_cases.py  test_conversation_service.py  test_db.py  test_duplicate_detector.py  test_llm_factory.py  test_llm_providers.py  test_schema_extractor.py
