[project]
name = "squad-nous"
version = "0.1.0"
description = "AI chatbot for customer data collection - Rabobank Squad Nous"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "motor>=3.7,<4.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "openai>=1.60,<2.0",
    "pyyaml>=6.0,<7.0",
    "tenacity>=9.0,<10.0",
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<7.0",
    "mongomock-motor>=0.0.34",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "app/exceptions.py",
    "app/models/registration.py",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]  # Allow Depends() in function defaults (FastAPI pattern)

[tool.mypy]
python_version = "3.13"
strict = true
